# microstack

./: Cargo.toml  README.md  README.txt  VERSION.txt
.github/workflows/: cargo.yml  pdd.yml  tarpaulin.yml  up.yml  xcop.yml
benches/: insert.rs  len.rs  push.rs  vs_vec.rs
src/: clone.rs  ctors.rs  debug.rs  iterators.rs  lib.rs  serialization.rs  stack.rs
